[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sleeping wisp.png" type="Texture" id=1]
[ext_resource path="res://scenes/wisps/WispBase.gd" type="Script" id=2]
[ext_resource path="res://assets/shadow far.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[node name="Wisp" type="Area2D"]
angular_damp = 50.0
script = ExtResource( 2 )

[node name="ShadowFar" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="TerrainTimer" type="Timer" parent="."]
wait_time = 1.9

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 1.7

[connection signal="timeout" from="TerrainTimer" to="." method="_on_TerrainTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
